<resources>
    <string name="app_name">Project Classroom</string>
    <string name="hello">TODO</string>
    <string name="project_classroom">Project Classroom</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="join_classroom">Join Classroom</string>
    <string name="join_videoclass">Join VideoClass</string>
    <string name="create">create</string>
    <string name="create_class">Create Class</string>
    <string name="login">Login</string>
    <string name="get_otp">Get OTP</string>
    <string name="class_name">Class name</string>
    <string name="section">Section</string>
    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="info">info</string>
    <string name="this_is_background_img">this is background img</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="class_settings">Class Settings</string>
    <string name="todo">TODO</string>
    <string name="load">Load</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>